<?xml version="1.0"?>
<package format="3">
  <name>mrpt_sensor_imu_taobotics</name>
  <version>0.2.3</version>
  <description>ROS node for Taobotics USB IMUs (based on mrpt-hwdrivers)</description>

  <url type="website">https://github.com/mrpt-ros-pkg/mrpt_sensors</url>
  <maintainer email="joseluisblancoc@gmail.com">José Luis Blanco-Claraco</maintainer>

  <author>José Luis Blanco-Claraco</author>

  <license>BSD</license>
  <url>https://wiki.ros.org/mrpt_msgs_bridge</url>

  <build_depend>ros_environment</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--<depend>rclcpp</depend>-->
  <depend>rclcpp_components</depend>
  <!--<depend>tf2</depend>-->
  <depend>tf2_ros</depend>

  <depend>mrpt_msgs</depend>
  <depend>mrpt_sensorlib</depend>


  <depend>mrpt_libhwdrivers</depend>
  <depend>mrpt_libros_bridge</depend>

  <!-- DEPS for mrpt_libros_bridge (can be removed after release of mrpt_libros_bridge>=2.13.8) -->
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <!-- -->

  <depend>ament_lint_common</depend>
  <depend>ament_lint_auto</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
